Fix media query breakpoint overlap at 1024px
Change tablet media query from max-width: 1024px to max-width: 1023px
to prevent both tablet and desktop queries from matching at exactly 1024px.

Breakpoints now cleanly separate:
- Mobile: ≤480px
- Tablet: 481px - 1023px
- Desktop: ≥1024px

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -333,7 +333,7 @@ a.advert:hover {
 }
 
 /* Tablets */
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1023px) {
   .hidden-on-tablet {
     display: none;
   }
